# AetherMind-V2

./: settings.gradle.kts
.github/workflows/: build-apk.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/vision/: AetherEngine.cpp  AetherEngine.h  aether_jni_bridge.cpp
app/src/main/java/com/aethermind/: MainActivity.kt
app/src/main/java/com/aethermind/core/: AetherAccessibilityService.kt  AetherForegroundService.kt  AetherRuntime.kt  ForegroundAppDetector.kt  ScreenCaptureManager.kt  ShizukuActionExecutor.kt
app/src/main/java/com/aethermind/vision/: AetherNativeBridge.kt
app/src/main/res/values/: strings.xml
app/src/main/res/xml/: aether_accessibility_config.xml
